# o1c

./: .gitignore  CMakeLists.txt  LICENSE  pom.xml
.github/workflows/: cmake.yml  codeql.yml  maven.yml
all/: pom.xml
all/src/assembly/: mrjar.xml
c/: CMakeLists.txt
c/include/: chacha20.h  curve25519.h  drbg.h  ed25519.h  hash.h  o1c.h  poly1305.h  ristretto255.h  sha512.h  util.h  x25519.h  xchacha20poly1305.h
c/src/: CMakeLists.txt  aead.c  auth.c  chacha20.c  crypto.c  curve25519.c  drbg.c  hash.c  jni.c  poly1305.c  poly1305_64.c  scalar25519.c  sha512.c  util.c  x25519.c  xchacha20poly1305.c
c/src/curve25519/: curve25519.c  curve25519_tables.h
c/src/include/: curve25519.h  sha512.h
c/test/: CMakeLists.txt  gen.c  test.h  test_chacha20.c  test_chacha20poly1305.c  test_curve25519.c  test_curve25519.h  test_ed25519.c  test_ed25519.txt  test_poly1305.c  test_ristretto255.c  test_ristretto255.h  test_scalar25519.c  test_scalar25519.txt  test_util.h  test_xchacha20poly1305.c
doc/spi/: random.adoc
java11/: pom.xml
java11/src/main/java/dev/o1c/jep324/: Provider.java  XDHKeyExchangeFactory.java  XDHKeyPairCodec.java  XDHPrivateKeyCodec.java  XDHPublicKeyCodec.java  package-info.java
java11/src/main/java/dev/o1c/jep329/: ChaChaCipherFactory.java  package-info.java
java15/: pom.xml
java15/src/main/java/dev/o1c/jep339/: EdDSAKeyPairCodec.java  EdDSAPrivateKeyCodec.java  EdDSAPublicKeyCodec.java  EdDSASignatureFactory.java  Provider.java  package-info.java
java15/src/test/java/dev/o1c/: SecretKeySealTest.java
java15/src/test/java/dev/o1c/internal/: Ristretto255VaultTest.java  RistrettoChaChaVaultTest.java  XChaCha20Poly1305Test.java
java15/src/test/java/dev/o1c/lwc/: NistLwcTestVectors.java
java15/src/test/java/dev/o1c/spi/: CipherKeyFactoryTest.java  CryptoHashTest.java  VaultTest.java  XChaCha20Poly1305Test.java
java15/src/test/java/dev/o1c/test/: BCCipherTest.java  BCKeyExchangeTest.java  BCSignatureTest.java  CipherTest.java  Ed25519SignatureTest.java  JEP324KeyExchangeTest.java  JEP329CipherTest.java  JEP339SignatureTest.java  KeyExchangeTest.java  SignatureTest.java
java15/src/test/java/dev/o1c/util/: ByteOpsTest.java
java8/: pom.xml
java8/src/main/java/dev/o1c/: DataSecurity.java  O1CException.java  Seal.java  SealedData.java  Sealer.java  SecretKeySeal.java  SecretKeySealer.java  SecureData.java  TokenSeal.java
java8/src/main/java/dev/o1c/bc/: BouncyCastleKeyExchangeFactory.java  BouncyCastleKeyPairCodec.java  BouncyCastleSignatureFactory.java  Curve.java  CurveAlgorithm.java  CurveCodec.java  PrivateKeyCodec.java  Provider.java  PublicKeyCodec.java  package-info.java
java8/src/main/java/dev/o1c/i2p/: Ed25519KeyPairCodec.java  Ed25519PrivateKeyCodec.java  Ed25519PublicKeyCodec.java  Ed25519Signature.java  Ed25519SignatureFactory.java
java8/src/main/java/dev/o1c/internal/: GroupOperations.java  Ristretto255Vault.java  RistrettoChaChaVault.java  SignCryptVault.java  SystemEntropyChannel.java  XChaCha20Poly1305.java
java8/src/main/java/dev/o1c/lib/: O1CLib.java
java8/src/main/java/dev/o1c/primitive/: AeadCipher.java  Authenticator.java  CipherKey.java  CipherKeyFactory.java  CryptoHash.java  EntropyChannel.java  RandomBytesGenerator.java  SignatureKey.java  SignatureKeyFactory.java  VerificationKey.java  VerificationKeyFactory.java
java8/src/main/java/dev/o1c/spi/: Algorithm.java  ByteOps.java  Cipher.java  CipherFactory.java  CipherKey.java  CipherKeyFactory.java  CryptoHash.java  DefaultCipher.java  DefaultKeyExchange.java  DefaultKeyGenerator.java  DefaultSignature.java  ExchangeKey.java  HashFactory.java  InvalidAuthenticationTagException.java  InvalidMacException.java  InvalidProviderException.java  InvalidSealException.java  InvalidSignatureException.java  KeyCodec.java  KeyExchange.java  KeyExchangeFactory.java  KeyGenerator.java  (+16 more)
src/main/c/: CMakeLists.txt  curve25519.c  drbg.c  ed25519.c  jni.c  poly1305_32.c  ristretto255.c  scalar25519.c  x25519.c
src/main/c/entropy/: entropy_getentropy.c  entropy_getrandom.c  entropy_rdseed64.c  entropy_windows.c
src/main/c/include/: chacha20.h  curve25519.h  dev_o1c_lib_O1CLib.h  drbg.h  ed25519.h  hash.h  mem.h  o1c.h  ristretto255.h  scalar25519.h  sha512.h  util.h  x25519.h
src/main/c/random/: CMakeLists.txt  entropy_getentropy.c  entropy_getrandom.c  entropy_rdseed64.c  entropy_windows.c
src/main/java/dev/o1c/: KeyManager.java  KeyPair.java  O1CException.java  PublicKey.java  SecretKey.java  SecureData.java
src/main/java/dev/o1c/impl/: DefaultKeyManager.java  DefaultKeyPair.java  DefaultPublicKey.java  DefaultSecretKey.java
src/main/java/dev/o1c/internal/: RistrettoChaChaVault.java  SystemRandomBytesGenerator.java  SystemSeedGenerator.java
src/main/java/dev/o1c/lwc/: package-info.java
src/main/java/dev/o1c/spi/: Certificate.java  CertificateFactory.java  Cipher.java  CipherKey.java  CipherSession.java  CryptoHash.java  ExchangeKey.java  Hash.java  HashFactory.java  InvalidAuthenticationTagException.java  InvalidKeyException.java  InvalidMacException.java  InvalidProviderException.java  InvalidSealException.java  InvalidSignatureException.java  KeyExchangeFactory.java  KeyFactory.java  KeyPair.java  PrivateKey.java  PublicKey.java  RandomBytesGenerator.java  SecretKey.java  SignatureFactory.java  SigncryptionFactory.java  SigncryptionKey.java  SigningKey.java  Vault.java  VerifyingKey.java  package-info.java
src/main/java/dev/o1c/util/: ByteOps.java  PublicKey.java  Validator.java
src/test/c/: CMakeLists.txt  gen.c  test.h  test_chacha20.c  test_chacha20.txt  test_curve25519.c  test_ristretto255.c  test_ristretto255b3.c  test_xchacha20poly1305.c  test_xchacha20poly1305.txt
src/test/java/dev/o1c/: KeyManagerTest.java  SecretKeySealTest.java
src/test/java/dev/o1c/impl/: DefaultKeyManagerTest.java
src/test/java/dev/o1c/internal/: RistrettoChaChaVaultTest.java
src/test/java/dev/o1c/lwc/: NistLwcTestVectors.java
src/test/java/dev/o1c/spi/: CipherKeyFactoryTest.java  CipherTest.java  CryptoHashTest.java
src/test/java/dev/o1c/util/: ByteOpsTest.java
(+145 files in other folders)
